# spi_lcd_touch

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/AS608/: AS608.c  CMakeLists.txt
components/AS608/include/: AS608.h
components/lv_app/: CMakeLists.txt  NUM1.c  NUM2.c  NUM3.c  bad.c  bg.c  bg_off.c  bg_on.c  call.c  error.c  kt_off.c  kt_on.c  light_off.c  light_on.c  lose.c  lv_app.c  people.c  setting.c  timing.c  wifi_off.c  wifi_on.c  zhiwen.c
components/lv_app/include/: lv_app.h
main/: CMakeLists.txt  idf_component.yml  spi_lcd_touch_example_main.c
