idf_component_register(SRCS "people.c" "wifi_on.c" "wifi_off.c" "kt_on.c" "kt_off.c" "light_on.c" "light_off.c" "setting.c" "lv_app.c" "error.c" "call.c" "timing.c" "bg.c" "light_on.c" "light_off.c" "kt_on.c" "kt_off.c"
                    "bg_on.c" "bg_off.c" "wifi_on.c" "wifi_off.c" "people.c"
                    REQUIRES lvgl 
                    INCLUDE_DIRS "include")
